# SMOG

./: .gitignore  Cargo.toml  README.md
assets/shaders/: particles_lite.wgsl
common/src/: lib.rs
map-editor/: Cargo.toml  README.md
map-editor/assets/maps/: map template.psd
map-editor/assets/shaders/: simulation.wgsl
map-editor/src/: README.md  lib.rs  main.rs
packet-tools/: Cargo.toml  README.md
packet-tools/src/: client_packets.rs  game_packets.rs  lib.rs  server_packets.rs
render/: Cargo.toml  README.md
render/src/: lib.rs  vertex.rs
server/: Cargo.toml  README.md
server/src/: error.rs  lib.rs  main.rs
smog/: Cargo.toml  README.md  build.rs
smog/assets/: textures.txt
smog/assets/maps/default/: map.smog  map.smoge
smog/assets/maps/panorama/: map.smog  map.smoge
smog/assets/maps/ruins/: map.smog
smog/src/: controller.rs  lib.rs  main.rs  network.rs  pipeline.rs  solver.rs  ui.rs
smog/src/controller/: model.rs
smog/src/network/: client.rs  error.rs  packets.rs
smog/src/render/: particle.rs
smog/src/solver/: particle.rs
smog/src/ui/: game.rs  lobby.rs  main_menu.rs  over.rs
smog/src/ui/game/: interface.rs
solver/: Cargo.toml  README.md
solver/src/: lib.rs  model.rs  multithreaded.rs  particle.rs  utils.rs
src/: main.rs  main3.rs  multithreaded.rs  particle.rs  pipeline.rs  solver.rs
src/pipeline/: particle.rs
