[workspace]
members = ["smog", "packet-tools", "server", "map-editor", "solver", "render", "common"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.39.2", features = ["full"] }
bevy = "0.14.0"

[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
