[package]
name = "map-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.0"
image = { version = "0.25.2" }
rand = "0.8.5"
solver = { path = "../solver" }
render = { path = "../render" }
text_io = "0.1.12"
postcard = { version = "1.0.0", features = ["use-std"] }
serde = { version = "1.0.*", default-features = false }
