[package]
name = "map-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.0"
rand = "0.8.5"
anyhow = "1.0.86"
postcard = { version = "1.0.0", features = ["use-std"] }
serde = { version = "1.0.*", default-features = false }
image = { version = "0.25.2" }
text_io = "0.1.12"
solver = { path = "../solver" }
render = { path = "../render" }
common = { path = "../common" }
 