[package]
name = "smog"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.0"
tokio = { version = "1.39.2", features = ["full"] }
crossbeam-channel = "0.5.13"
anyhow = "1.0.86"
clipboard = "0.5.0"
image = { version = "0.25.2" }
bevy_simple_text_input = { git = "https://github.com/DangerousVegetable/bevy_simple_text_input", branch = "dev"}
common = { path = "../common" }
packet-tools = { path = "../packet-tools" }
server = { path = "../server" }
solver = { path = "../solver" }
render = { path = "../render" }
map-editor = { path = "../map-editor" }
winit = "0.30.5"

[build-dependencies]
embed-resource = "2.4.3"
